Home: Fix best sellers y lo nuevo, align productos

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -477,8 +477,10 @@ ul.breadcrumbs{
         li {
           @include inlineblock;
           width: 15%;
-          // border: 1px solid blue;
           margin: 0 12px 0 12px;
+          img {
+            width: 120px;
+          }
           h6.number {
             font-family: "Avant", Arial, sans-serif;
             font-size: 2em;
